samples/_failures_safe/1761329229_22036d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4f230ce.c: In function ‘transpose_matrix’:
./samples/SAFE/__tmp_b4f230ce.c:155:5: error: expected declaration or statement at end of input
  155 |     }
      |     ^
